# otter_code

./: .gitignore  README.md  pyproject.toml
src/dspy_coding_agent/: __init__.py
src/dspy_coding_agent/backends/: mcp_client.py  shell_docker.py
src/dspy_coding_agent/scripts/: example.py
src/dspy_coding_agent/tools/: __init__.py  refactoring.py
src/otter_code/: __init__.py  config.py
src/otter_code/backends/: __init__.py  mcp_client.py  shell_local.py
src/otter_code/modules/: __init__.py
src/otter_code/modules/Agent/: __init__.py  module.py
src/otter_code/modules/Execute/: __init__.py  module.py
src/otter_code/modules/Plan/: __init__.py  module.py
src/otter_code/modules/ReAct/: __init__.py  module.py
src/otter_code/scripts/: example.py  native_tool_calling.py  otter_cli.py
src/otter_code/tools/: __init__.py  code_editing.py  communication.py  filesystem.py  shell.py
tests/: conftest.py  test_config.py  test_imports.py  test_tools_code_editing.py  test_tools_communication.py  test_tools_filesystem.py  test_tools_init.py  test_tools_shell.py
